# 2.machine_learning

./: README.md  app.py  config.py  pyproject.toml  setup.py
data/: app_flight_df.csv
models/: dec_tree.joblib  lgb_model.joblib
notebooks/: eda.ipynb  ml-app.ipynb  ml.ipynb  preprocessing.ipynb
src/: exampl_module.py  example_module.py
