[tool.poetry]
name = "2-machine-learning"
version = "0.1.0"
description = ""
authors = ["robinrolandtumambing <robin.double@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
lazypredict = "^0.2.13"
scikit-learn = "^1.5.2"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
